Issue fix - EUCalendar Policy areas section cannot be expanded/collapsed on desktop resolution.

--- a/ShunghamWebsite/App_Data/Sitefinity/WebsiteTemplates/Shungham/App_Themes/Shungham/Global/screen.css
+++ b/ShunghamWebsite/App_Data/Sitefinity/WebsiteTemplates/Shungham/App_Themes/Shungham/Global/screen.css
@@ -958,7 +958,12 @@ article, aside, details, div, figcaption, figure, footer, header, hgroup, main, 
     background: #fafafa;
 }
 
-#aside > ul > li.toggle > ul {
+#aside > ul > li > .RadTreeView {
+    position: absolute;
+    left: -3000em;
+}
+
+#aside > ul > li.toggle > ul, #aside > ul > li.toggle > .RadTreeView {
     position: relative;
     left: 0;
 }
